tests/errors/compiler.ScriptNotExists.art
got: execute "arturo --no-color filenotthere.art"
print got